--- a/frontend/src/app/features/students/students.component.html
+++ b/frontend/src/app/features/students/students.component.html
@@ -1,7 +1,6 @@
 <div class="container mt-5 text-center">
-  <div class="form-floating mb-3">
-    <input class="form-control" placeholder="Pesquisar aluno">
-    <label>Pesquisar aluno</label>
+  <div class="input-group mb-5">
+    <input [(ngModel)]="filter" class="form-control" placeholder="Pesquisar aluno">
   </div>
   <div class="btn-group m-5 d-flex justify-content-center ">
     <button routerLink="/add-student" class="btn btn-outline-secondary m-4">Adicionar Estudante</button>
@@ -15,11 +14,12 @@
       <td>Curso</td>
       <td>Matrícula</td>
     </tr>
-    <tr *ngFor="let stutend of students" class="table">
+    <tr *ngFor="let stutend of filteredStudents" class="table">
       <td>{{ stutend.id }}</td>
       <td>{{ stutend.name }}</td>
       <td>{{ stutend.email }}</td>
       <td>{{ stutend.course }}</td>
+      <td>{{ stutend.registration }}</td>
     </tr>
   </table>
 </div>
