Estilização do Header.

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,9 @@
+<nav class="navbar navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a  routerLink="/" class="navbar-brand">Controle de Alunos</a>
+  </div>
+</nav>
+
+
 <router-outlet></router-outlet>
+
